added background color

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <title>Implosion</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: palevioletred;
+        }
+    </style>
 </head>
 <body>
 
 <div class="container">
     <div class="page-header">
-        <h1>Implosions Game</h1>
+        <h1>One More Brick</h1>
     </div>
 </div>
 
